# Django_API-JWT

./: README.md  pyproject.toml
blog/: db.sqlite3  requirements.txt
blog/blog/: settings.py  urls.py
blog/phone/: admin.py  models.py  serializer.py  urls.py  views.py
blog/phone/migrations/: 0001_initial.py
