[tool.poetry]
name = "django_api"
version = "0.1.0"
description = ""
authors = ["BelalElolhi <belalelolahi003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
black = "^21.12b0"
flake8 = "^4.0.1"
djangorestframework = "^3.13.0"
djangorestframework-simplejwt = "^5.0.0"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
